add: light sources and map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,8 @@
         "span": "cpp",
         "text_encoding": "cpp",
         "cinttypes": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "xhash": "cpp"
     },
 
 }
